--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 services:
   database:
     image: postgres:latest
@@ -7,11 +7,30 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: main
       PGDATA: /var/lib/postgresql/data
+    container_name: coordinate_db
     volumes:
       - database-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    restart: always
+  backend:
+    image: backend
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+    environment:
+      CONFIG_PATH: config.yaml
+    container_name: coordinate_backend
+    command: python3.9 main.py
+    ports:
+      - "8080:8080"
+    depends_on:
+      - database
 
 volumes:
     database-data:
-
+networks:
+  default:
+    name: coordinate-default
