add test db, fix configs

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,13 +1,12 @@
 app:
   secret_table: [146, 172, 30, 158, 169, 130, 62, 91, 94, 112, 63, 164, 124, 11, 7, 144, 33, 74, 99, 39, 147, 151, 50, 79, 145, 1, 108, 156, 60, 21, 29, 157, 52, 45, 152, 116, 165, 73, 180, 93, 142, 87, 95, 160, 41, 137, 14, 140, 118, 97, 64, 126, 6, 68, 44, 55, 18, 100, 16, 125, 19, 103, 148, 17, 134, 37, 131, 111, 82, 43, 32, 23, 98, 106, 175, 49, 65, 10, 174, 133, 25, 34, 163, 51, 143, 115, 12, 176, 173, 67, 121, 66, 177, 84, 128, 155, 138, 4, 110, 3, 53, 135, 80, 36, 81, 120, 119, 42, 168, 117, 69, 46, 31, 35, 71, 88, 58, 70, 105, 28, 139, 178, 54, 104, 166, 86, 5, 57, 129, 127, 102, 101, 170, 40, 171, 132, 76, 109, 136, 85, 92, 61, 179, 26, 24, 78, 72, 107, 153, 75, 113, 114, 48, 83, 2, 89, 159, 47, 56, 150, 167, 149, 154, 15, 27, 122, 8, 13, 161, 77, 9, 38, 20, 162, 59, 22, 141, 123, 96, 90]
-  host: 0.0.0.0
+  host: backend
   port: 8080
-  domain: https://0.0.0.0:8080
   secret_key: coordinate_secret
   n: 0.018
 
 db:
-  host: 10.254.0.1
+  host: database
   port: 5432
   db: main
   user: project_admin
