--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
     container_name: coordinate_db
     volumes:
       - database-data:/var/lib/postgresql/data
+      - ./migrations/v1.0.0.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     restart: always
@@ -28,6 +29,19 @@ services:
       - "8080:8080"
     depends_on:
       - database
+  database-pytest:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: tester
+      POSTGRES_PASSWORD: testtest
+      POSTGRES_DB: main
+    container_name: coordinate_db_test
+    ports:
+      - "5432:5432"
+    volumes:
+     - ./migrations/v1.0.0.sql:/docker-entrypoint-initdb.d/init.sql
+    restart: always
+    profiles: ["test"]
   tests:
     build: &build_test_backend
       context: .
@@ -38,7 +52,7 @@ services:
     container_name: coordinate_tests
     command: pytest -svvx tests
     depends_on:
-      - database
+      - database-pytest
     profiles: ["test"]
   flake:
     build: *build_test_backend
