--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,7 +2,9 @@ SQLAlchemy~=1.4.25
 aiopg~=1.3.2
 aiohttp~=3.7.4.post0
 aiohttp_session~=2.9.0
+aiohttp-apispec~=2.2.1
 cryptography~=35.0.0
+marshmallow~=3.14.0
 pytest~=6.2.5
 trafaret~=2.1.0
 trafaret_config~=2.0.2
