--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,19 +11,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
-        
+     
     - name: Login to Github Packages
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
+        username: ${{ github.repository_owner }}
         password: ${{ secrets.GHCR_PAT }}
         
     - name: Build image and push to Docker Hub and GitHub Container Registry
