--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
         file: ./Dockerfile
         push: true # Will only build if this is not here
         tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ steps.prep.outputs.tags }}
+            ghcr.io/new/${{ github.repository }}:latest
+            ghcr.io/new/${{ github.repository }}:${{ steps.prep.outputs.tags }}
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
