--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,7 @@ jobs:
         context: ./
         file: ./Dockerfile
         push: true # Will only build if this is not here
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        tags: ghcr.io/OWNER/IMAGE_NAME:latest
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
